# ats-mini-WS

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docs.yml  lint.yml
ats-mini/: About.cpp  Battery.cpp  Ble.cpp  Ble.h  Button.cpp  Button.h  Common.h  Draw.cpp  Draw.h  EIBI.cpp  EIBI.h  Layout-Default.cpp  Layout-SMeter.cpp  Makefile  Menu.cpp  Menu.h  Network.cpp  Remote.cpp  Remote.h  Rotary.h  SI4735-fixed.h  Scan.cpp  Station.cpp  Storage.cpp  Storage.h  Themes.cpp  Themes.h  Utils.cpp  Utils.h  ats-mini.ino  partitions.csv  patch_init.h  sketch.yaml  tft_setup.h
changelog/: +menu-bounds.fixed.md  +psram-error.added.md  +serial.changed.md  +theme-cmd.changed.md  +wifimulti.changed.md  287.fixed.md
docs/source/: accessories.md  conf.py  development.md  flash.md  hardware.md  index.md  manual.md  memory.html  memory.md  mods.md  recovery.md
